@@ -16,6 +16,15 @@
 	* standalone/wxwin/mainwin.cpp: Make menu acceleration keys unique.
 	[ Bugzilla 1000618 ]
 
+2008-09-03  John Dallaway  <jld@ecoscentric.com>
+
+	* standalone/wxwin/configitem.cpp: Observe item/macro name setting
+	when updating tree items.
+	* standalone/wxwin/docsystem.cpp: Tweak naming of root node in
+	documentation tree.
+	* standalone/wxwin/configtool.cpp: Search for the eCos repository if
+	the saved location no-longer exists. [ Bugzilla 1000465 ]
+ 
 2008-08-15  Bart Veer  <bartv@ecoscentric.com>
 
 	* common/common/build.cxx: avoid compiler warning.
